--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,21 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Deno",
-      "type": "node",
-      "request": "launch",
-      "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "deno",
-      "runtimeArgs": ["run", "--inspect-brk=127.0.0.1:9229", "-A", "src/main.ts"],
-      "port": 9229,
-      "outputCapture": "std"
-    }
-  ]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Deno",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "runtimeExecutable": "deno",
+            "runtimeArgs": [
+                "run",
+                "--inspect-brk=127.0.0.1:9229",
+                "-A",
+                "src/main.ts"
+            ],
+            "port": 9229,
+            "outputCapture": "std",
+            "internalConsoleOptions": "openOnSessionStart"
+        }
+    ]
 }
