--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,8 @@
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "runtimeExecutable": "deno",
-            "runtimeArgs": [
-                "run",
-                "--inspect-brk=127.0.0.1:9229",
-                "-A",
-                "src/main.ts"
-            ],
+            "runtimeArgs": ["run", "--inspect", "--allow-all", "src/main.ts"],
+            "attachSimplePort": 9229,
             "port": 9229,
             "outputCapture": "std",
             "internalConsoleOptions": "openOnSessionStart"
